--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 		<script type="text/javascript" src="./tooltip.js"></script>
 		<script type="text/javascript" src="jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+		<script type="text/x-mathjax-config">
+		if (typeof MathJaxListener !== 'undefined') {
+		  MathJax.Hub.Register.StartupHook('End', function () {
+		    MathJaxListener.invokeCallbackForKey_('End');
+		  });
+		}
+		</script>
 	
 	</head>
 
@@ -94,21 +101,21 @@ last_plot()+scale_x_datetime(labels = date_format(&quot;%b&quot;))</code></pre>
 <h4>Holt-Winters Times Series Forecasting Algoritm</h4>
 <p>Holt-Winters is a forecasting method for dealing with time series data with both trend and seasonal components. It is an extension of the Single Exponential Smoothing method. The Holt-Winters method has two versions, additive and multiplicative, the use of which depends on the characteristics of the particular time series. For simplicity, we use the additive method. Holt-Winters predictions are obtained as a weighted average of past observed values where the weights decline exponentially so that the values of recent observations contribute to the forecast more than the values of earlier observations. The additive formula of this model is as follow:</p>
 
-<p>$$
+<p>\[
 \begin{align}
-&amp; s<em>{i}=\alpha(x</em>{i}-p<em>{i-k})+(1-\alpha)(s</em>{i-1}+t<em>{i-1}) \
-&amp; t</em>{i}=\beta(s<em>{i}-s</em>{i-1})+(1-\beta)t<em>{i-1} \
-&amp; p</em>{i}=\gamma(x<em>{i}-s</em>{i})+(1-\gamma)p_{i-k} \
+&amp; s_{i}=\alpha(x_{i}-p_{i-k})+(1-\alpha)(s_{i-1}+t_{i-1}) \\
+&amp; t_{i}=\beta(s_{i}-s_{i-1})+(1-\beta)t_{i-1} \\
+&amp; p_{i}=\gamma(x_{i}-s_{i})+(1-\gamma)p_{i-k} \\
 \end{align}
-$$</p>
+\]</p>
 
-<p>Here $$\alpha, \beta, \gamma $$ represent data smoothing factor, trend smoothing factor, seasonal change smoothing factor separately and their values are between 0 to 1; k is the time period. Initially, we set$$s<em>{0}=x</em>{0}$$,  $$t<em>{0}=x</em>{1}-x_{0}$$.The prediction formula follows:</p>
+<p>Here \(\alpha, \beta, \gamma \) represent data smoothing factor, trend smoothing factor, seasonal change smoothing factor separately and their values are between 0 to 1; k is the time period. Initially, we set\(s_{0}=x_{0}\),  \(t_{0}=x_{1}-x_{0}\).The prediction formula follows:</p>
 
-<p>$$
+<p>\[
 \begin{align}
-x<em>{i+h}=s</em>{i}+ht<em>{i}+p</em>{i-k+(h\,mod\,k)}
+x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 \end{align}
-$$</p>
+\]</p>
 
 </div>
 </div>
@@ -125,7 +132,7 @@ $$</p>
 
 <p>Table 1 and Figure 4 shows the result of clustering. The map shows the geographical location of these 29 cities.</p>
 
-table>
+<table>
 <thead>
 <tr>
 <th>No.</th>
