--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <div id="ClusterViz1">
 	<script type = "text/javascript"src="cluster1.js"></script>
 </div>
-</p>
+<br />*Note: Energy Demand is normalized by subtracting its mean and dividing the result by its standard deviation over the duration considered.*</p>
 <p>Cities in Cluster 1 are: Abidjan, Eugene, Tacoma, Queensland.</p>
 <p>In this cluster, yearly energy pattern turns out to be “U” style, with the peak in January (boreal winter, austral summer) and the smoothly valley in August (boreal summer, austral winter). Intuitively, this pattern should correspond with cities of one of two specifications:</p>
 <ol style="list-style-type: decimal">
@@ -305,7 +305,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <div id="ClusterViz2">
 	<script type = "text/javascript"src="cluster2.js"></script>
 </div>
-</p>
+<br />*Note: Energy Demand is normalized by subtracting its mean and dividing the result by its standard deviation over the duration considered.*</p>
 
 <p>Cities in Cluster 2 are: Dakar, Honolulu, Manila, Mbabane, Nairobi, Singapore, Antigua.</p>
 <p>In this cluster, the energy demand profile appears to be flat. In other words, the intra-year fluctuations in energy demand is much less pronounced. Intuitively, this patterns should correspond with cities with one of two specifications:</p>
@@ -324,7 +324,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <div id="ClusterViz3">
 	<script type = "text/javascript"src="cluster3.js"></script>
 </div>
-</p>
+<br />*Note: Energy Demand is normalized by subtracting its mean and dividing the result by its standard deviation over the duration considered.*</p>
 <p>Cities in Cluster 3 are: Amman, Chattanooga, Colorado Springs, Kansas City, Louisville, New York, Omaha, Springfield, Tokyo, Detroit, Indianapolis, Philadelphia.</p>
 <p>In this cluster, the energy demand profile appears to have 2 peaks, one during summer and one during winter. Intuitively, this pattern should correspond with cities need heating during winter and cooling during summer.</p>
 <p>All cities in this cluster are located between the 30 and 60 degrees latitude. This supports the hypothesis that both heating and cooling is needed at different times of the year.</p></div>
@@ -337,7 +337,7 @@ x_{i+h}=s_{i}+ht_{i}+p_{i-k+(h\,mod\,k)}
 <div id="ClusterViz4">
 	<script type = "text/javascript"src="cluster4.js"></script>
 </div>
-</p>
+<br />*Note: Energy Demand is normalized by subtracting its mean and dividing the result by its standard deviation over the duration considered.*</p>
 <p>Cities in Cluter 4 are: City of North Little Rock, El Paso, Los Angeles, Memphis, Sacramento, Delhi - BRPL.</p>
 <p>In this cluster, yearly energy pattern turns out to be “N” style, with the much less pronounced peak in January (boreal winter, austral summer) when compared with Cluster 3 and a peak in August (boreal summer, austral winter). Intuitively, this pattern should correspond with cities of one of two specifications:</p>
 <ol style="list-style-type: decimal">
